Complete project setup: documentation index, agent docs, security config
- Add comprehensive documentation-index.md for workflow reference
- Create .clinerules, .cursorrules, .github/copilot-instructions.md for AI agents
- Add prompts/ directory with development, feature-addition, troubleshooting guides
- Organize infra/ structure with Docker Compose configs and K8s manifests
- Enable branch protection requiring signed commits
- Enable vigilant mode (Dependabot automated security fixes)
- Make repository public for free branch protection
- Update PROJECT.md and context.md with current status
- All commits GPG-signed per workflow requirements

--- a/infra/lan-runner/.env.example
+++ b/infra/lan-runner/.env.example
@@ -13,7 +13,8 @@ RUNNER_WORKDIR=/actions
 
 # Ollama configuration
 OLLAMA_HOST_PORT=11434
-OLLAMA_GPU= # leave empty for CPU-only; set to "all" if GPU present and NVIDIA container toolkit installed
+# leave empty for CPU-only; set to "all" only if NVIDIA drivers + container toolkit are installed on the host
+OLLAMA_GPU=
 OLLAMA_MODELS_DIR=./ollama_data
 
 # Optional: Proxy
